--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/src/Assets/WhatsApp Image 2024-03-23 at 19.16.51_d679109e.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Personal-Portfolio</title>
   </head>
   <body>
     <div id="root"></div>
